@@ -58,6 +58,7 @@ static const evName evNames[] = {
     { evPlayCD,            "evPlayCD"            },
     { evPlayVCD,           "evPlayVCD"           },
     { evPlayDVD,           "evPlayDVD"           },
+    { evPlayImage,         "evPlayImage"         },
     { evLoadURL,           "evSetURL"            }, // legacy
     { evLoadURL,           "evLoadURL"           },
     { evPlayTV,            "evPlayTV"            },
